# swarm_launcher

./: .gitignore  Cargo.toml  README.md  script_execution.sh
configuration/: agent_a2a_config.toml  agent_mcp_config.toml  agent_planner_config.toml
src/: main.rs
use_cases/use_case_1_configuration/: Use_case_1_description  agent_a2a_config_math.toml
