[package]
name = "swarm_launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
a2a_agent_backbone = { git = "https://github.com/fcn06/swarm.git" }
a2a_planner_backbone = { git = "https://github.com/fcn06/swarm.git" }
configuration = { git = "https://github.com/fcn06/swarm.git" }


tokio = { version = "1", features = ["full"] }
futures = "0.3"

serde = { version = "1.0", features = ["derive","rc"] }
serde_json = "1.0"
anyhow = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

clap = { version = "4.5", features = ["derive"] }


uuid = { version = "1", features = ["v4","serde"] }
toml = "0.9"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3